[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutl"
version = "0.1.0"
description = "A CLI tool to cut N lines from a file and trim them from the source"
authors = [
    { name = "nightsky", email = "batman@arkham.gpg" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
cutl = "cutl.cli:main"
